--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
     <color name="wear_primary">#1E88E5</color>
     <color name="wear_on_primary">#FFFFFF</color>
     <color name="wear_background">#121212</color>
+    <color name="accuracy_high">#2E7D32</color>
+    <color name="accuracy_medium">#F9A825</color>
+    <color name="accuracy_low">#FB8C00</color>
+    <color name="accuracy_unreliable">#C62828</color>
 </resources>
