--- a/mobile/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/mobile/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,12 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+    <!-- pointer (outer) -->
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M54,18a36,36 0 1,1 -0.1,0z" />
+        android:fillColor="#E6F1FF"
+        android:pathData="M54,20 L66,76 Q66,86 54,92 Q42,86 42,76 Z"/>
+    <!-- inner cut -->
     <path
-        android:fillColor="#2962FF"
-        android:pathData="M54,30l16,44h-32z" />
+        android:fillColor="#0B1E3A"
+        android:pathData="M54,28 L62,70 Q62,74 54,78 Q46,74 46,70 Z"/>
+    <!-- small star -->
+    <path
+        android:fillColor="#E6F1FF"
+        android:pathData="M78,30 L81,39 L90,42 L81,45 L78,54 L75,45 L66,42 L75,39 Z"/>
 </vector>
